Updates from Overleaf

--- a/03_implementation.tex
+++ b/03_implementation.tex
@@ -1,13 +1,11 @@
 \chapter{Implementation}
+\todo[inline]{intro her må endres da deler av Julia-forklaringen er flyttet utenfor.}
 In this chapter, I will discuss why it is interesting to implement AD in Julia. I will also give some implementation-specific details and benchmark the implementation against other AD libraries in Julia and MATLAB.
 \label{ch:Implementation}
-\section{Julia}
-\label{sec:Julia}
-Julia is a new programming language that was created by Jeff Bezanson, Alan Edelman, Stefan Karpinski and Viral B. Shah at MIT, Massachusetts Institute of Technology \citep{juliaLab}. The language was created in 2009, but was first released publicly in 2012. In 2012 the creators said in a blog post that:
-\begin{quotation}
-"We want a language that’s open source, with a liberal license. We want the speed of C with the dynamism of Ruby. We want a language that’s homoiconic, with true macros like Lisp, but with obvious, familiar mathematical notation like Matlab. We want something as usable for general programming as Python, as easy for statistics as R, as natural for string processing as Perl, as powerful for linear algebra as Matlab, as good at gluing programs together as the shell. Something that is dirt simple to learn, yet keeps the most serious hackers happy. We want it interactive and we want it compiled. (Did we mention it should be as fast as C?)"\emph{\citep{juliaBlogRelease2012}}.
-\end{quotation}
-In short, Julia seems to be the perfect language for numerical applications and it would be interesting to see how it performs compared to MATLAB. When it comes to AD in Julia, there are already some packages that can be used. Most of them are backward AD-packages designed for machine learning, for example AutoGrad \citep{knet2016mlsys} and Zygote \citep{innes2018don}. The reason why AD-packages for machine learning are based on backward AD is that machine learning, without going to deep into the subject, largely amounts to the minimization of functions with a large number of input parameters, but with only one output parameter. As discussed in \autoref{sec:BackwardAD}, backward AD is much more efficient than forward AD in these types of evaluations. For numerical applications there is usually many input parameters and output parameters. Hence there is no clear advantage of using backward AD compared to forward AD. 
+\section{Automatic Differentiation in Julia}
+\label{sec:AD in Julia}
+In short, Julia seems to be the perfect language for numerical applications and it would be interesting to see how it performs compared to MATLAB.
+When it comes to AD in Julia, there are already some packages that can be used. Most of them are backward AD-packages designed for machine learning, for example AutoGrad \citep{knet2016mlsys} and Zygote \citep{innes2018don}. The reason why AD-packages for machine learning are based on backward AD is that machine learning, without going to deep into the subject, largely amounts to the minimization of functions with a large number of input parameters, but with only one output parameter. As discussed in \autoref{sec:BackwardAD}, backward AD is much more efficient than forward AD in these types of evaluations. For numerical applications there is usually many input parameters and output parameters. Hence there is no clear advantage of using backward AD compared to forward AD. 
 
 There is one package called \textit{ForwardDiff} \citep{ForwardDiff} being developed by the Julia community that uses forward AD. ForwardDiff relies on dual numbers as explained in \autoref{sec:DualNumbers} extended to multiple dimensions. This is called multidimensional dual numbers and a vector \textbf{x} of length $n$ is represented as
 \begin{align*}
@@ -44,7 +42,7 @@ To obtain a working AD library, we need to implement operators for the \texttt{F
 \end{center}
 This is clearly not a suitable way to implement AD as it quickly becomes difficult to see what type of expression it is. If you did not know what type of function f is, it would take you quite some time to figure it out. And more importantly, the possibility for human error becomes very large when you have to write unreadable code like this. This approach should be avoided. 
 
-\cite{doi:10.1137/080743627} and \cite{lieMrstUrl} suggest a much more elegant implementation, in which one, instead of making new functions that take in \texttt{FAD}-variables as parameters, overloads the standard operators (+,-,*,/) and the elementary functions (exp, sin, log, etc.). This is where the elegance of having a custom \texttt{FAD} struct appears. In Julia, we can use \emph{multiple dispatch} to call our implementation of standard operators and elementary functions when they are used on \texttt{FAD} structs. A quick explanation of \emph{multiple dispatch} that satisfies our needs is that the compiler at runtime understands what types are given as input for either an operator or a function and chooses the correct method based on this. To demonstrate, the following function \lstinputlisting{code/overload_plus_operator_AD.jl} 
+\cite{doi:10.1137/080743627} and \cite{lieMrstUrl} suggest a much more elegant implementation, in which one, instead of making new functions that take in \texttt{FAD}-variables as parameters, overloads the standard operators (+,-,*,/) and the elementary functions (exp, sin, log, etc.). This is where the elegance of having a custom \texttt{FAD} struct appears. In Julia, we can use \emph{multiple dispatch} to call our implementation of standard operators and elementary functions when they are used on \texttt{FAD} structs. A quick explanation of \emph{multiple dispatch} that satisfies our needs is that the compiler at run-time understands what types are given as input for either an operator or a function and chooses the correct method based on this. To demonstrate, the following function \lstinputlisting{code/overload_plus_operator_AD.jl} 
 overloads the + operator. Here, we import the + operator from \texttt{Base} (which is where the standard functions in Julia lie) and overload it for \texttt{FAD} variables. For brevity, I have removed checks and edge cases and only left the method for \texttt{FAD} variables with equal length. The broadcast function adds each Jacobian for each primary variable together. This implementation of the + operator is only used when there are \texttt{FAD} variables on both sides of the operator. Hence, if $z = x+y$ is computed for $x = 1$ and $y = 3$, Julia understands that it is not the definition above, but the normal addition for integers it should use. But if $x,y = \texttt{initialize\_FAD}(1,3)$ is declared, so that $x$ and $y$ both are \texttt{FAD} variables, then Julia's multiple dispatch will understand that the new definition of the "+"-operator should be used on the expression $z = x+y$. What we need to remember is that if I now write $z = x + 3$, with $x$ as an \texttt{FAD} variable, Julia will deploy an error message. This is because we also have to implement
 \lstinputlisting{code/overload_plus_operator_number.jl}
 Here, the first function will be used if the + operator is used with an \texttt{FAD} variable on the left hand side and a number on the right. The last line is a compact way of writing the opposite function, which will be used when the number is the left-hand argument to the + operator. Once all such options are implemented for the four elementary algebraic operators, as well as for elementary unary functions, we can simply write $f = y+\exp(2*x*y)$ and Julia will understand that it is our implementation of + and * operators and the exponential function that shall be used. The variable $f$ will now become an \texttt{FAD}-struct with the correct value and derivatives. 
