--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -32,6 +32,15 @@ year = "2012",
 note = {Accessed 21.11.2018}
 }
 
+@misc{juliaBlogReleaseV1.0,
+title = {Julia 1.0},
+author = {{Julia Community}},
+url = "https://julialang.org/blog/2018/08/one-point-zero",
+urldate = "2019-04-09",
+year = "2018",
+note = {Accessed 09.04.2019}
+}
+
 @misc{mrstHomepage,
 key = {MRST Homepage},
 title = "Matlab Reservoir Simulation Toolbox",
@@ -202,8 +211,25 @@ eprint = {
 
 @misc{MoreDotsJuliaBlog,
   key = {More Dots: Syntactic Loop Fusion in Julia},
+  author = {Steven G. Johnson},
   url = {https://julialang.org/blog/2017/01/moredots},
   urldate = {2019-03-13},
   year = {2017.01.21},
   note = {Accessed 13.03.2019}
+}
+
+@misc{JunoIDE,
+    key = {Juno},
+    url = {http://junolab.org},
+    urldate = {2019-04-11},
+    year = {n.d.},
+    note = {Accessed 11.04.2019}
+}
+
+@misc{JunoGithub,
+    key = {Juno's Github page},
+    url = {https://github.com/JunoLab},
+    urldate = {2019-04-11},
+    year = {n.d.},
+    note = {Accessed 11.04.2019}
 }
