--- a/99_drafts.tex
+++ b/99_drafts.tex
@@ -34,8 +34,15 @@ Since Julia is an open source and free program to use, one of its strengths is t
 
 \subsection{Metaprogramming in Julia}
 \label{sec:Metaprogramming}
-In the last year there have been published numerous projects that makes coding in Julia easier. A lot of these projects exploits that Julia is a dynamic language and that it has metaprogramming. In the blog post from \cite{juliaBlogRelease2012} the creators says that Julia shall contain "... true macros like Lisp...". Macros are functions in Julia that are using metaprogramming to 
-\subsubsection{Debugger}
+In the last year there have been published numerous projects that makes coding in Julia easier. A lot of these projects exploits that Julia is a dynamic language and that it has metaprogramming. In the blog post from \cite{juliaBlogRelease2012} the creators says that Julia shall contain "... true macros like Lisp...". Macros are functions in Julia that are using metaprogramming to modify your existing code to give some extra functionality. The macro functions are easily recognized by an "@" in front of the function name. To use a macro function on any function, you simply call the macro function before original function call, and the metaprogramming will handle the rest. I will now show three examples of macro functions in Julia that are very useful when creating a numerical simulations.
 \subsubsection{Profiling}
-Profiling is an effective method to obtain overview of where the bottlenecks lie in a code when trying to optimize its performance. The method consist of taking snapshots of the code with small time intervals and for each snapshot we register what function we are at and the functions that have called this function. In this way we obtain a register of how many times we have observed that we have been in every function. This will not give a perfect overview of how much time we spend in each function, and we even risk not registering all functions we use. But as the time interval between the snapshots are small (e.g. every tenth microsecond), a function that is not registered will not be interesting to optimize as it already is very fast. 
+The first macro function I want to show is the \texttt{@profiler} function. Profiling is an effective method to obtain overview of where the bottlenecks lie in a code when trying to optimize its performance. The method consist of taking snapshots of the code with small time intervals and for each snapshot we register what function we are at and the functions that have called this function. In this way we obtain a register of how many times we have observed that we have been in every function. This will not give a perfect overview of how much time we spend in each function, and we even risk not registering all functions we use. But as the time interval between the snapshots are small (e.g. every tenth microsecond), a function that is not registered will not be interesting to optimize as it already is very fast. 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{figures/profiling_screenshot.png}
+    \caption{}
+    \label{fig:profilingExample}
+\end{figure}
+
+\subsubsection{Debugger}
 \subsubsection{Benchmarking}
