Julia chapter created

--- a/03_theory.tex
+++ b/03_theory.tex
@@ -207,6 +207,7 @@ substituting $s$ with $g_5$ yields
 The calculation of the derivatives together with a dependency graph can be seen in \autoref{fig:depency_graph_backward_AD}. This shows that we get all the derivatives of $f(x) = g_5$ with a single function evaluation!
 \begin{figure}[H]
 	\centering
+	    \includegraphics[width = 0.9\textwidth]{figures/dependency_graph_backward_AD.pdf}
  	    \caption{Graphs to visualize the process of backward AD. To the left is a dependency graph of the elementary functions in \eqref{eq:DependencyBackwardAD} and to the right are the derivatives of $g_5$ with respect to the dependencies given in the dependency graph.}
 	\label{fig:depency_graph_backward_AD}
 \end{figure}
