--- a/04_implementation.tex
+++ b/04_implementation.tex
@@ -3,7 +3,7 @@
 In this chapter, I will discuss why it is interesting to implement AD in Julia. I will also give some implementation-specific details and benchmark the implementation against other AD libraries in Julia and MATLAB.
 \label{ch:Implementation}
 \section{Automatic Differentiation in Julia}
-\label{sec:AD in Julia}
+\label{sec:ADInJulia}
 In short, Julia seems to be the perfect language for numerical applications and it would be interesting to see how it performs compared to MATLAB.
 When it comes to AD in Julia, there are already some packages that can be used. Most of them are backward AD-packages designed for machine learning, for example AutoGrad \citep{knet2016mlsys} and Zygote \citep{innes2018don}. The reason why AD-packages for machine learning are based on backward AD is that machine learning, without going to deep into the subject, largely amounts to the minimization of functions with a large number of input parameters, but with only one output parameter. As discussed in \autoref{sec:BackwardAD}, backward AD is much more efficient than forward AD in these types of evaluations. For numerical applications there is usually many input parameters and output parameters. Hence there is no clear advantage of using backward AD compared to forward AD. 
 
@@ -335,7 +335,7 @@ The compiler does this because it does not understand that all the operations ar
 So what are the consequences for the implementation of \texttt{CJAD}? The result from \autoref{tab:dotOperator} implies that as long as we write all our vectorized code like the \texttt{dotsOutside} method or in such a manner that it is obvious for the compiler that it is only vectorized operations involved, we will have the same computational efficiency as for devectorized code. More specifically for the \texttt{CJAD} implementation, we often have a vector that is added/subtracted/divided/multiplied with another vector, and then the vectorized implementation will have the same computational efficiency as the devectorized. Since devectorized code is less readable,  implementations reported in the following will consist of vectorized code for readability.
 
 \section{Benchmarking Automatic Differentiation}
-As mentioned in \autoref{sec:Julia}, Julia already has an AD library called \texttt{ForwardDiff} \citep{ForwardDiff} that uses forward AD. Hence, it would be interesting to see how the different implementations compare as the functions evaluated increase in complexity. In addition to \texttt{ForwardDiff}, I have added two AD implementation from the MATLAB Reservoir Simulation Toolbox (MRST) \citep{mrstHomepage} to the benchmark, to see how the Julia implementations compare to optimized AD tools in MATLAB. The basic implementation in MRST is similar to \texttt{FAD}, where the Jacobians has a sparse matrix structure, and is henceforth referred to as \texttt{MRST}. The second MATLAB implementation is similar to \texttt{CJAD} in the sense that it exploits the diagonal structure of some Jacobians. This method is called \texttt{MRST\_diagonal}. To benchmark the efficiency of the different AD tools, I have evaluated the vector function $f: \Re^{n\times 3} \rightarrow \Re^n $, where
+As mentioned in \autoref{sec:ADInJulia}, Julia already has an AD library called \texttt{ForwardDiff} \citep{ForwardDiff} that uses forward AD. Hence, it would be interesting to see how the different implementations compare as the functions evaluated increase in complexity. In addition to \texttt{ForwardDiff}, I have added two AD implementation from the MATLAB Reservoir Simulation Toolbox (MRST) \citep{mrstHomepage} to the benchmark, to see how the Julia implementations compare to optimized AD tools in MATLAB. The basic implementation in MRST is similar to \texttt{FAD}, where the Jacobians has a sparse matrix structure, and is henceforth referred to as \texttt{MRST}. The second MATLAB implementation is similar to \texttt{CJAD} in the sense that it exploits the diagonal structure of some Jacobians. This method is called \texttt{MRST\_diagonal}. To benchmark the efficiency of the different AD tools, I have evaluated the vector function $f: \Re^{n\times 3} \rightarrow \Re^n $, where
 \begin{equation}
 \label{eq:benchmarkFunction}
 f(x,y,z)  = \exp(2xy) - 4xz^2 + 13x - 7, \qquad x,y,z \in \Re^n.
@@ -348,7 +348,7 @@ f(x,y,z)  = \exp(2xy) - 4xz^2 + 13x - 7, \qquad x,y,z \in \Re^n.
     \caption{Computational time for different methods calculating the value and Jacobian of $f$ in Equation \eqref{eq:benchmarkFunction} as a function of length of the input vectors.}
     \label{fig:benchmarkADVectorFunction}
 \end{figure}
-\autoref{fig:benchmarkADVectorFunction} reports six different graphs. The first thing you observe is that \texttt{ForwardDiff} scales very badly as n becomes large. This is because it creates and works with the full $3n \times 3n$ Jacobian matrix as discussed in \autoref{sec:Julia}. I stopped the benchmark of \texttt{ForwardDiff} for $n = 3^8$, as the Jacobian at this point already has more than 380 million elements. We can nevertheless observe that for small vectors, the methods implemented in MATLAB, as well as \texttt{FAD} and \texttt{CJAD}, have more overhead than \texttt{ForwardDiff} and the analytic solution. This makes them slower for small $n$, but as $n$ grows, this overhead becomes quickly negligible. Based on \autoref{fig:benchmarkADVectorFunction}, from a numerical simulation point of view, \texttt{ForwardDiff} is useless for obtaining the Jacobian of functions, as it scales badly for increasing $n$.
+\autoref{fig:benchmarkADVectorFunction} reports six different graphs. The first thing you observe is that \texttt{ForwardDiff} scales very badly as n becomes large. This is because it creates and works with the full $3n \times 3n$ Jacobian matrix as discussed in \autoref{sec:ADInJulia}. I stopped the benchmark of \texttt{ForwardDiff} for $n = 3^8$, as the Jacobian at this point already has more than 380 million elements. We can nevertheless observe that for small vectors, the methods implemented in MATLAB, as well as \texttt{FAD} and \texttt{CJAD}, have more overhead than \texttt{ForwardDiff} and the analytic solution. This makes them slower for small $n$, but as $n$ grows, this overhead becomes quickly negligible. Based on \autoref{fig:benchmarkADVectorFunction}, from a numerical simulation point of view, \texttt{ForwardDiff} is useless for obtaining the Jacobian of functions, as it scales badly for increasing $n$.
 
 Apart from the conclusion on \texttt{ForwardDiff}, we can observe that it is a change in dominance at $n = 3^7 = 2187$. For shorter vectors, both methods implemented in Julia are more efficient than the two methods in MATLAB. For $n>2187$ \texttt{FAD} is the slowest, followed by \texttt{MRST}. Hence, as $n$ becomes larger than 2187, the methods in Julia and MATLAB that exploit the diagonal structure of the Jacobian perform better than the ones that only use a sparse matrix structure. This makes sense, as the evaluation of $f$ will only give a diagonal Jacobian. As $n$ becomes large, \texttt{CJAD} and \texttt{MRST\_diagonal} perform very similarly and their computational costs approach that of the analytic evaluation. What is also interesting to see is that whereas \texttt{CJAD} always is faster than \texttt{FAD}, \texttt{MRST\_diagonal} is less efficient than \texttt{MRST} for short vectors. Assuming that both the MRST implementations are optimized, this indicates that the elegant way of implementing a custom Jacobian in Julia using multiple dispatch adds very little overhead compared to MATLAB. 
 
