--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -233,3 +233,36 @@ eprint = {
     year = {n.d.},
     note = {Accessed 11.04.2019}
 }
+
+@misc{Profile.jl,
+    key = {Profile.jl},
+    url = {https://docs.julialang.org/en/v1/manual/profile/index.html},
+    urldate = {2019-04-12},
+    year = {n.d.},
+    note = {Accessed 12.04.2019}
+}
+
+@misc{JunoProfilerMacro,
+    key = {Juno profiler},
+    url = {http://docs.junolab.org/latest/man/juno_frontend/#Profiler-1},
+    urldate = {2019-04-12},
+    year = {n.d.},
+    note = {Accessed 12.04.2019}
+}
+
+@misc{Debugger,
+    title = {A Julia interpreter and debugger},
+    author = {Holy, Tim and Carlsson, Kristoffer and Pfitzner, Sebastian and Fischer, Keno},
+    url = {https://julialang.org/blog/2019/03/debuggers},
+    urldate = {2019-04-12},
+    year = {2019},
+    note = {Accessed 12.04.2019}
+}
+
+@misc{@time,
+    key = {@time docs},
+    url = {https://docs.julialang.org/en/v1/base/base/#Base.@time},
+    urldate = {2019-04-12},
+    year = {n.d.},
+    note = {Accessed 12.04.2019}
+}
