--- a/main.tex
+++ b/main.tex
@@ -45,10 +45,11 @@
 \pagenumbering{arabic}                               %Sets the page numbering to arabic numbers.
 
 % \input{01_introduction.tex}
-\input{02_theory.tex}
-\input{03_implementation.tex}
-\input{04_flow_solver_with_AD.tex}
-\input{05_local_AD.tex}
+\input{02_julia.tex}
+\input{03_theory.tex}
+\input{04_implementation.tex}
+\input{05_flow_solver_with_AD.tex}
+\input{06_local_AD.tex}
 % \input{06_conclusion_and_future_work.tex}
 
 \input{99_drafts.tex}
