Updates from Overleaf

--- a/04_implementation.tex
+++ b/04_implementation.tex
@@ -90,7 +90,7 @@ which gives row number 2 and 4 and values 3 and 4. For a column with only zero e
 \end{equation*}
 which indicates that there are no nonzero elements in this column. 
 
-This way of storing a matrix will decrease both memory usage and computational efficiency dramatically when working with large and sparse matrices compared to storing the full matrix. When performing operations on the matrix, e.g., an element-wise vector-matrix  multiplication, the computational gain comes from the opportunity to neglect all zero values. If we store the matrix as a full dense matrix, then we have to compute a lot of multiplications that ends up being zero, which we with a sparse matrix structure can avoid computing. The method, however, brings some extra work that consist of doing numerous checks to make sure that we have done the multiplication correctly. Take the example from \autoref{sec:FADWithMultipleParameters}, where we wish to compute $f = 2\cdot \textbf{x}\cdot \textbf{y}$ for the primary variables $\textbf{x},\textbf{y}\in \Re^3$ defined in \eqref{def:VectorAD}. Initializing the primary variables as \texttt{FAD}-structs gives 
+This way of storing a matrix will decrease both memory usage and computational efficiency dramatically when working with large and sparse matrices compared to storing the full matrix. When performing operations on the matrix, e.g., an element-wise vector-matrix  multiplication, the computational gain comes from the opportunity to neglect all zero values. If we store the matrix as a full dense matrix, then we have to compute a lot of multiplications that ends up being zero, which we with a sparse matrix structure can avoid computing. The method, however, brings some extra work that consist of doing numerous checks to make sure that we have done the multiplication correctly. Take the example from \autoref{sec:FADWithVectorParameters}, where we wish to compute $f = 2\cdot \textbf{x}\cdot \textbf{y}$ for the primary variables $\textbf{x},\textbf{y}\in \Re^3$ defined in \eqref{def:VectorAD}. Initializing the primary variables as \texttt{FAD}-structs gives 
 \begin{multicols}{2}
     \noindent
     \begin{align*}
@@ -120,7 +120,7 @@ This way of storing a matrix will decrease both memory usage and computational e
         \end{pmatrix}}\right\}} \right].
     \end{align*}
 \end{multicols}
-Here, I have written out the Jacobians as full matrices for better visualization, although in theory they will be stored as \texttt{SparseMatrixCSC} structs. In the multiplication of the two \texttt{FAD}-variables, the element-wise multiplication of the values is not interesting and we will instead focus on how we obtain the new Jacobian for $\textbf{x}\cdot \textbf{y}$. Similarly as in \autoref{sec:FADWithMultipleParameters} we find the new Jacobian using the product rule, but now we can separate the operations into two calculations. First, we have the Jacobian for the primary variable \textbf{x}:
+Here, I have written out the Jacobians as full matrices for better visualization, although in theory they will be stored as \texttt{SparseMatrixCSC} structs. In the multiplication of the two \texttt{FAD}-variables, the element-wise multiplication of the values is not interesting and we will instead focus on how we obtain the new Jacobian for $\textbf{x}\cdot \textbf{y}$. Similarly as in \autoref{sec:FADWithVectorParameters} we find the new Jacobian using the product rule, but now we can separate the operations into two calculations. First, we have the Jacobian for the primary variable \textbf{x}:
 \begin{align*}
     \begin{pmatrix}
         4&0&0\\
