--- a/03_theory.tex
+++ b/03_theory.tex
@@ -215,6 +215,7 @@ Comparing this to the method of dual numbers from \autoref{sec:DualNumbers}, whe
 The disadvantage of backward AD is that to be able carry along function and derivative values as we did in forward AD, we need to implement the dependency tree shown in \autoref{fig:depency_graph_backward_AD}. This makes the implementation of backward AD much harder than for forward AD, and an inefficient implementation of this tree will reduce the advantage of backward AD. Also, if $f$ is a vector-evaluated function $f: \Re^n \rightarrow \Re^m$ and not a scalar function, backward AD needs to run $m$ times Hence, if $n\approx m$, forward AD and backward AD will have approximately the same complexity. This is the main reason why we in the following will focus on implementing forward rather than backward AD.
 
 \subsection{Forward Automatic Differentiation With Multiple Parameters}
+\label{sec:FADWithMultipleParameters}
 When we are dealing with functions with many input parameters and we wish to implement a forward AD, there are alternative ways of implementing this rather than implementing with dual numbers and evaluating the function $n$ times.  \citet{doi:10.1137/080743627} describes a method that calculates all the derivatives in one function evaluation. To illustrate this method, consider a scalar function $f: \Re^n \rightarrow \Re$, that we want to obtain the gradient of. Then, the main idea is that we define what we call our \textit{primary variables}. This is all the variables in the space that we are currently working in. Each primary variable is an AD-variable containing the derivatives of itself with respect to all the other primary variables. Say we have three variables $x$, $y$ and $z$, and for any function $f(x,y,z)$ we are interested in finding the gradient of $f$, $\nabla f=(f_x, f_y, f_z)^\top$. To achieve this, we define the corresponding AD-variables
 \begin{equation*}
     [\adpair{x}{(1,0,0)^\top}]\hspace{2em},\hspace{2em}
@@ -234,7 +235,7 @@ This result is equal to the tuple
 \end{equation*}
 for the corresponding $x$, $y$ and $z$ values. 
 \subsection{Forward Automatic Differentiation With Vector Functions}
-\label{sec:FADWithMultipleParameters}
+\label{sec:FADWithVectorParameters}
 For numerical solution of (partial) differential equations, the functions we evaluate as part of the discretization are usually vector functions and not scalar functions. Hence $f: \Re^n \rightarrow \Re^m$. Neidinger's method still applies, only that the primary variables are now vectors and instead of containing the gradient of itself with respect to all the other primary variables, we now have the Jacobian. For a function $f$, the Jacobian with respect to its $n$ primary variables is given as
 \begin{align*}
     J_f  =
