Updates from Overleaf

--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -11,7 +11,8 @@ Where the implementation of the local AD tool is easier than for \texttt{FAD} an
 \lstinputlisting{code/FlowSystem.jl}
 This struct look very similar to the \texttt{FAD} struct, but where \texttt{globalJac} is one single sparse matrix instead of a vector of sparse matrices and each element in \texttt{globalJac} being a vector. At this point you might not understand why it is quicker to calculate the residuals cell by cell compared to everything in one go. The reason for this is that we know that the structure of the global Jacobian will stay the same throughout the whole simulation. This means we can use the grid variable \texttt{G}, that contains the information on which cells are neighbours, and build the correct structure of \texttt{globalJac} once and for all. When we run the simulation we only change the values inside of \texttt{globalJac}, but the structure stays the same. This reuse of \texttt{globalJac} will save a lot of memory allocations and hence speed compared to \texttt{FAD} and \texttt{CJAD} which allocates new structs for each calculation. By creating a new constructor for \texttt{FlowSystem} that uses the grid variable \texttt{G}, the variables \texttt{eqVal} and \texttt{globalJac} will be allocated with the correct length and the correct structure.
 
-Now that FlowSystem stores the residual values and its Jacobian, we need a function to traverse through all cells and calculate the residuals. I have chosen to call this function \texttt{assembleFlowSystem!(...)} where the exclamation mark is a Julia convention for a function that modifies its input parameters. The 
+Now that FlowSystem stores the residual values and its Jacobian, we need a function to traverse through all cells and calculate the residuals.  I have chosen to call this function \texttt{assembleFlowSystem!(...)} where the exclamation mark is a Julia convention for a function that modifies its input parameters. The 
+\lstinputlisting{code/assembleFlowSystem!.jl}
 
 
 \todo[inline]{Se på parallellisering for lokal AD?}
