--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -9,10 +9,14 @@ Since we now only operate on one cell at the time the implementation of Local AD
 
 Where the implementation of the local AD tool is easier than for \texttt{FAD} and \texttt{CJAD}, there is more work when creating the simulation. Since we do not use discrete gradient and divergence operators, but traverse through the grid cell by cell, we need somewhere to store the resulting values of the residual function. We also need a method to traverse through all the cells and to calculate the contributions from each neighbouring cell. Where the AD part of the code in \texttt{FAD} and \texttt{CJAD} were fully separated from the simulation, for local AD it is more integrated. This means that when using local AD to create the simulation it becomes a more application specific implementation than the method for \texttt{FAD} and \texttt{CJAD}. To create the flow solver from \autoref{ch:FlowSolver} I have chosen to store the calculated residual values in another struct called \texttt{FlowSystem}:
 \lstinputlisting{code/FlowSystem.jl}
-This struct look very similar to the \texttt{FAD} struct, but where \texttt{globalJac} is one single sparse matrix instead of a vector of sparse matrices and each element in \texttt{globalJac} being a vector. At this point you might not understand why it is quicker to calculate the residuals cell by cell compared to everything in one go. The reason for this is that we know that the structure of the global Jacobian will stay the same throughout the whole simulation. This means we can use the grid variable \texttt{G}, that contains the information on which cells are neighbours, and build the correct structure of \texttt{globalJac} once and for all. When we run the simulation we only change the values inside of \texttt{globalJac}, but the structure stays the same. This reuse of \texttt{globalJac} will save a lot of memory allocations and hence speed compared to \texttt{FAD} and \texttt{CJAD} which allocates new structs for each calculation. By creating a new constructor for \texttt{FlowSystem} that uses the grid variable \texttt{G}, the variables \texttt{eqVal} and \texttt{globalJac} will be allocated with the correct length and the correct structure.
+This struct look very similar to the \texttt{FAD} struct, but where \texttt{globalJac} is one single sparse matrix instead of a vector of sparse matrices and each element in \texttt{globalJac} being a vector. At this point you might not understand why it is quicker to calculate the residuals cell by cell compared to everything in one go. The reason for this is that we know that the structure of the global Jacobian will stay the same throughout the whole simulation. This means we can use the grid variable \texttt{G}, that contains the information on which cells are neighbours, and build the correct structure of \texttt{globalJac} once and for all. When we run the simulation we only change the values inside of \texttt{globalJac}, but the structure stays the same. This reuse of \texttt{globalJac} will save a lot of memory allocations and hence speed compared to \texttt{FAD} and \texttt{CJAD} which allocates new structs for each calculation. By creating a new constructor for \texttt{FlowSystem} that uses the grid variable \texttt{G}, the variables \texttt{eqVal} and \texttt{globalJac} will be allocated with the correct length and the correct structure before the simulation begins.
 
-Now that FlowSystem stores the residual values and its Jacobian, we need a function to traverse through all cells and calculate the residuals.  I have chosen to call this function \texttt{assembleFlowSystem!(...)} where the exclamation mark is a Julia convention for a function that modifies its input parameters. The 
+Now that \texttt{FlowSystem} stores the residual values and its Jacobian, we need a function to traverse through all cells and calculate the residuals.  I have chosen to call this function \texttt{assembleFlowSystem!} where the exclamation mark is a Julia convention for a function that modifies its input parameters. The code for \texttt{assembleFlowSystem!} can be seen below. I have for brevity removed all declaration of helping variables and replaced the code for evaluation of the equations and the updating of \texttt{FlowSystem} with comments.
+\lstset{numbers=left}
 \lstinputlisting{code/assembleFlowSystem!.jl}
-
+\lstset{numbers=none}
+\texttt{assembleFlowSystem!} first resets \texttt{eqVal} and \texttt{GlobalJac} such that the structures are equal, but all the values are zero. Then the function begin traversing through the grid and for every cell it iterates through all neighbouring cells. The \texttt{eqVal} and \texttt{globalJac} variables in the \texttt{FlowSystem} struct is updated in line number 6, 8 and 10 in the inner loop. As a reminder, the residual function that \texttt{FlowSystem} will be updated with is the \texttt{presEq} function defined in \autoref{sec:setupGovEq}:
+\lstinputlisting{code/presEq.jl}
+In line number 6, when \texttt{fromCell} and \texttt{toCell} are equal, the first term in the sum in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function that returns a \texttt{LAD} struct. In differ from \texttt{FAD} and \texttt{CJAD} the method with local AD no longer has AD variables  How this function is implemented can such that the correct index in \texttt{FlowSystem.eqVal} and the diagonal value representing the correct index in FlowSystem.eqVal is added.
 
 \todo[inline]{Se på parallellisering for lokal AD?}
